[project]
name = "pybugs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.14.3",
    "cryptography>=46.0.3",
    "google-genai>=1.57.0",
    "loguru>=0.7.3",
    "mlx-whisper>=0.4.3",
    "ollama>=0.6.1",
    "requests>=2.32.5",
]
